--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Todo List</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<h1>todo list</h1>
 	<ul id="todo-list">
 
 	</ul>
+	<form action="">
+		<input type="text" name="new todo">
+		<input type="submit" value="Add Todo">
+	</form>
+	<script src="./script.js"></script>
 </body>
 </html>
